[tool.poetry]
name = "lvov"
version = "0.1.0"
description = ""
authors = ["João Caetano <joao.caetano@revolut.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
shap = "^0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
